k8s/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  template:
    metadata:
      labels:
        app: beers
        component: webapp
    spec:
      containers:
      - name: webapp
        image: dotnet2018.azurecr.io/webapp
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 20
          periodSeconds: 60 
        livenessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 30
          periodSeconds: 60                 
      imagePullSecrets:
      - name: dotnet2018
---
